[gd_scene load_steps=8 format=3 uid="uid://v686ud358780"]

[ext_resource type="Texture2D" uid="uid://b1ogmyjnmfqun" path="res://assets/backgrounds/grid.png" id="1_2gbuf"]
[ext_resource type="Shader" path="res://assets/shaders/scroll.gdshader" id="1_qeoaq"]
[ext_resource type="Script" path="res://scripts/menu/test_menu.gd" id="1_vq0ip"]
[ext_resource type="FontFile" uid="uid://dq26ibghph1f4" path="res://assets/font/04B_20__.TTF" id="2_s4w8k"]
[ext_resource type="FontFile" uid="uid://2hpnmrm7wumh" path="res://assets/font/FT2FONT.TTF" id="4_vxrwm"]
[ext_resource type="Texture2D" uid="uid://c6qji8pqkbi2o" path="res://icon.png" id="5_mrtay"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u27s5"]
shader = ExtResource("1_qeoaq")
shader_parameter/speed = 0.1

[node name="TestMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vq0ip")

[node name="Background" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_u27s5")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_2gbuf")

[node name="Title" type="Label" parent="."]
layout_mode = 1
offset_left = 16.0
offset_top = 16.0
offset_right = 512.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("2_s4w8k")
theme_override_font_sizes/font_size = 32
text = "trackermania"

[node name="TestLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 16.0
offset_top = 64.0
offset_right = 309.0
offset_bottom = 124.0
theme_override_fonts/font = ExtResource("4_vxrwm")
theme_override_font_sizes/font_size = 64
text = "test menu"

[node name="SysinfoContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -68.0
offset_right = 48.0
offset_bottom = -8.0
grow_vertical = 0

[node name="FPSLabel" type="Label" parent="SysinfoContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_vxrwm")
theme_override_font_sizes/font_size = 32

[node name="EngineLabel" type="Label" parent="SysinfoContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_vxrwm")
theme_override_font_sizes/font_size = 32

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -45.5
offset_right = 41.0
offset_bottom = 45.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 64

[node name="TestMusicButton" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TestMusicTextureButton" type="TextureButton" parent="HBoxContainer/TestMusicButton"]
layout_mode = 2
texture_normal = ExtResource("5_mrtay")
stretch_mode = 3

[node name="Label" type="Label" parent="HBoxContainer/TestMusicButton"]
layout_mode = 2
text = "Test Music"

[node name="MusicSelectButton" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MusicSelectTextureButton" type="TextureButton" parent="HBoxContainer/MusicSelectButton"]
layout_mode = 2
texture_normal = ExtResource("5_mrtay")
stretch_mode = 3

[node name="Label" type="Label" parent="HBoxContainer/MusicSelectButton"]
layout_mode = 2
text = "Music Select"

[node name="ControllerSetupButton" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ControllerSetupTextureButton" type="TextureButton" parent="HBoxContainer/ControllerSetupButton"]
layout_mode = 2
texture_normal = ExtResource("5_mrtay")
stretch_mode = 3

[node name="Label" type="Label" parent="HBoxContainer/ControllerSetupButton"]
layout_mode = 2
text = "Controller Setup"

[node name="ExitButton" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ExitTextureButton" type="TextureButton" parent="HBoxContainer/ExitButton"]
layout_mode = 2
texture_normal = ExtResource("5_mrtay")
stretch_mode = 3

[node name="Label" type="Label" parent="HBoxContainer/ExitButton"]
layout_mode = 2
text = "Exit Game"

[connection signal="pressed" from="HBoxContainer/MusicSelectButton/MusicSelectTextureButton" to="." method="_on_music_select_texture_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ControllerSetupButton/ControllerSetupTextureButton" to="." method="_on_controller_setup_texture_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ExitButton/ExitTextureButton" to="." method="_on_exit_texture_button_pressed"]
